--- a/dailystrips-style.css
+++ b/dailystrips-style.css
@@ -7,6 +7,11 @@ BODY {
     font-size: 150%;
 }
 
+.dailystrips-footer {
+    padding-top: 1em;
+    font-style: italic;
+}
+
 .strip-header {
     font-size: 120%;
     margin-bottom: 1em;
