Adding a global strip-img max-width in the CSS.  Zits needs it now, IMO, and I don't think there would ever be a time when I *wouldn't* want that max.

--- a/dailystrips-style.css
+++ b/dailystrips-style.css
@@ -39,9 +39,6 @@ BODY {
     font-style: italic;
 }
 
-#strip-img-dieselsweeties-main_strip {
-    max-width: 900px;
-}
-#strip-img-sfam-main_strip {
+.strip-img {
     max-width: 900px;
 }
